                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2020-08-14
 * Updated bootstrap-vue to 2.16.0.
 * Updated vue to 2.6.7.
 * Updated bootstrap to 4.5.2.
 * Added wing-pagination component to wing.vue.js.

2020-07-13
 * Fixed bug in Wing::Util::is_in() where it always returned true.

2020-07-10
 * Added Wing::Util with several utility functions that are useful all over wing apps.

2020-07-09
 * Give better diagnostics for Algolia API failures.

2020-07-06
 * Added captcha at account creation. If you have an existing app and want to use it you'll need to do the following:

    in etc/wing.conf add:

        "captcha" : {
            "on_create_account" : 1,
        },

    in views/account/create_accont_include.tt add:

        [% IF captcha.riddle %]
        <div class="form-group">
            <label for="_captcha_answer">Fill in the blank</label><br>
            <input type="hidden" name="_captcha_key" value="[% captcha.key %]">
                
                <div class="input-group">
                <div class="input-group-prepend">
                        <span class="input-group-text">[% captcha.riddle %]</span>
                </div>
                <input class="form-control" type="text" name="_captcha_answer" id="_captcha_answer">
            </div>
            <span class="form-text text-muted">(Required)</span>
        </div>
        [% END %]

    in views/error.tt replace:

        [% INCLUDE account/authenticate_include.tt redirect_after=params.redirect_after || request.path %]

    with:

        [% INCLUDE account/authenticate_include.tt redirect_after=params.redirect_after || request.path captcha=exception.captcha %]


2020-06-29
 * Allow fields in a class to be prioritized, to guarantee some get processed before others.
